ghc/compiler/tests/typecheck/should_succeed/tc004.hs
module ShouldSucceed where

f x = case x of
       True -> True
       False -> x
