ghc/compiler/tests/typecheck/should_fail/tcfail049.hs
module ShouldFail where

f x = g x
